--- a/Testing/packages.config
+++ b/Testing/packages.config
@@ -4,17 +4,21 @@
   <package id="asprise-ocr-api" version="15.3.1.0" targetFramework="net462" />
   <package id="asprise-ocr-dll-bundle-32" version="15.3.1.0" targetFramework="net462" />
   <package id="asprise-ocr-dll-bundle-64" version="15.3.1.0" targetFramework="net462" />
-  <package id="Autofac" version="4.4.0" targetFramework="net462" />
+  <package id="Autofac" version="4.6.0" targetFramework="net462" />
   <package id="Dapper" version="1.50.2" targetFramework="net451" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net45" />
   <package id="log4net" version="2.0.5" targetFramework="net451" />
-  <package id="Microsoft.AspNet.SignalR.Client" version="2.2.1" targetFramework="net451" />
+  <package id="Microsoft.AspNet.SignalR.Client" version="2.2.2" targetFramework="net462" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net451" />
-  <package id="Microsoft.Data.Edm" version="5.8.1" targetFramework="net462" />
-  <package id="Microsoft.Data.OData" version="5.8.1" targetFramework="net462" />
-  <package id="Microsoft.Data.Services.Client" version="5.8.1" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
+  <package id="Microsoft.Data.Edm" version="5.8.2" targetFramework="net462" />
+  <package id="Microsoft.Data.OData" version="5.8.2" targetFramework="net462" />
+  <package id="Microsoft.Data.Services.Client" version="5.8.2" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
   <package id="NHibernate" version="4.1.1.4000" targetFramework="net462" />
-  <package id="System.Spatial" version="5.8.1" targetFramework="net462" />
-  <package id="WindowsAzure.Storage" version="8.0.0" targetFramework="net451" />
+  <package id="System.ComponentModel.EventBasedAsync" version="4.0.11" targetFramework="net462" />
+  <package id="System.Dynamic.Runtime" version="4.0.0" targetFramework="net462" />
+  <package id="System.Linq.Queryable" version="4.0.0" targetFramework="net462" />
+  <package id="System.Net.Requests" version="4.0.11" targetFramework="net462" />
+  <package id="System.Spatial" version="5.8.2" targetFramework="net462" />
+  <package id="WindowsAzure.Storage" version="8.1.4" targetFramework="net462" />
 </packages>
