--- a/Zbang.Cloudents.Connect/packages.config
+++ b/Zbang.Cloudents.Connect/packages.config
@@ -1,39 +1,43 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AjaxMin" version="5.14.5506.26202" targetFramework="net462" />
-  <package id="Autofac" version="4.4.0" targetFramework="net462" />
+  <package id="Autofac" version="4.6.0" targetFramework="net462" />
   <package id="Autofac.Owin" version="4.0.0" targetFramework="net451" />
   <package id="Autofac.SignalR" version="3.0.2" targetFramework="net451" />
   <package id="jQuery" version="2.2.4" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net451" requireReinstallation="true" />
+  <package id="Microsoft.ApplicationInsights" version="2.3.0" targetFramework="net462" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.7" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.3.0" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.3.0" targetFramework="net462" />
   <package id="Microsoft.ApplicationInsights.TraceListener" version="2.2.0" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights.Web" version="2.2.0" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.2.0" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.Web" version="2.3.0" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.3.0" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.3.0" targetFramework="net462" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net451" />
-  <package id="Microsoft.AspNet.SignalR" version="2.2.1" targetFramework="net451" />
-  <package id="Microsoft.AspNet.SignalR.Core" version="2.2.1" targetFramework="net451" />
-  <package id="Microsoft.AspNet.SignalR.JS" version="2.2.1" targetFramework="net451" />
-  <package id="Microsoft.AspNet.SignalR.ServiceBus" version="2.2.1" targetFramework="net451" />
-  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.2.1" targetFramework="net451" />
+  <package id="Microsoft.AspNet.SignalR" version="2.2.2" targetFramework="net462" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.2.2" targetFramework="net462" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.2.2" targetFramework="net462" />
+  <package id="Microsoft.AspNet.SignalR.ServiceBus" version="2.2.2" targetFramework="net462" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.2.2" targetFramework="net462" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net45" />
-  <package id="Microsoft.Data.Edm" version="5.8.1" targetFramework="net462" />
-  <package id="Microsoft.Data.OData" version="5.8.1" targetFramework="net462" />
-  <package id="Microsoft.Data.Services.Client" version="5.8.1" targetFramework="net462" />
+  <package id="Microsoft.Data.Edm" version="5.8.2" targetFramework="net462" />
+  <package id="Microsoft.Data.OData" version="5.8.2" targetFramework="net462" />
+  <package id="Microsoft.Data.Services.Client" version="5.8.2" targetFramework="net462" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net45" developmentDependency="true" />
-  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
-  <package id="Microsoft.Owin.Cors" version="3.0.1" targetFramework="net45" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net45" />
-  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net462" />
+  <package id="Microsoft.Owin.Cors" version="3.1.0" targetFramework="net462" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net462" />
+  <package id="Microsoft.Owin.Security" version="3.1.0" targetFramework="net462" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
   <package id="Owin" version="1.0" targetFramework="net45" />
-  <package id="System.Spatial" version="5.8.1" targetFramework="net462" />
-  <package id="WindowsAzure.ServiceBus" version="2.3.4.0" targetFramework="net45" />
-  <package id="WindowsAzure.Storage" version="8.0.0" targetFramework="net451" />
+  <package id="System.ComponentModel.EventBasedAsync" version="4.0.11" targetFramework="net462" />
+  <package id="System.Dynamic.Runtime" version="4.0.0" targetFramework="net462" />
+  <package id="System.Linq.Queryable" version="4.0.0" targetFramework="net462" />
+  <package id="System.Net.Requests" version="4.0.11" targetFramework="net462" />
+  <package id="System.Spatial" version="5.8.2" targetFramework="net462" />
+  <package id="WindowsAzure.ServiceBus" version="4.1.2" targetFramework="net462" />
+  <package id="WindowsAzure.Storage" version="8.1.4" targetFramework="net462" />
 </packages>
