--- a/Zbang.Cloudents.Images/packages.config
+++ b/Zbang.Cloudents.Images/packages.config
@@ -5,10 +5,14 @@
   <package id="ImageResizer.Plugins.DiskCache" version="4.0.4" targetFramework="net451" />
   <package id="ImageResizer.WebConfig" version="4.0.4" targetFramework="net451" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net451" />
-  <package id="Microsoft.Data.Edm" version="5.8.1" targetFramework="net462" />
-  <package id="Microsoft.Data.OData" version="5.8.1" targetFramework="net462" />
-  <package id="Microsoft.Data.Services.Client" version="5.8.1" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
-  <package id="System.Spatial" version="5.8.1" targetFramework="net462" />
-  <package id="WindowsAzure.Storage" version="8.0.0" targetFramework="net451" />
+  <package id="Microsoft.Data.Edm" version="5.8.2" targetFramework="net462" />
+  <package id="Microsoft.Data.OData" version="5.8.2" targetFramework="net462" />
+  <package id="Microsoft.Data.Services.Client" version="5.8.2" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
+  <package id="System.ComponentModel.EventBasedAsync" version="4.0.11" targetFramework="net462" />
+  <package id="System.Dynamic.Runtime" version="4.0.0" targetFramework="net462" />
+  <package id="System.Linq.Queryable" version="4.0.0" targetFramework="net462" />
+  <package id="System.Net.Requests" version="4.0.11" targetFramework="net462" />
+  <package id="System.Spatial" version="5.8.2" targetFramework="net462" />
+  <package id="WindowsAzure.Storage" version="8.1.4" targetFramework="net462" />
 </packages>
