--- a/Zbang.Cloudents.JaredTests3/packages.config
+++ b/Zbang.Cloudents.JaredTests3/packages.config
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="4.6.0" targetFramework="net462" />
   <package id="Microsoft.Azure.Mobile.Server.Login" version="2.0.0" targetFramework="net462" />
-  <package id="Microsoft.IdentityModel.Logging" version="1.1.3" targetFramework="net462" />
-  <package id="Microsoft.IdentityModel.Tokens" version="5.1.3" targetFramework="net462" />
-  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net462" />
-  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net462" />
-  <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net462" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net462" />
+  <package id="Microsoft.IdentityModel.Logging" version="1.1.4" targetFramework="net462" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.1.4" targetFramework="net462" />
+  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net462" />
+  <package id="Microsoft.Owin.Security" version="3.1.0" targetFramework="net462" />
+  <package id="Microsoft.Owin.Security.OAuth" version="3.1.0" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
   <package id="Owin" version="1.0" targetFramework="net462" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.4.403061554" targetFramework="net462" />
 </packages>
