--- a/Zbang.Cloudents.Mvc4WebRole/packages.config
+++ b/Zbang.Cloudents.Mvc4WebRole/packages.config
@@ -16,8 +16,8 @@
   <package id="angular-material.TypeScript.DefinitelyTyped" version="1.6.4" targetFramework="net451" />
   <package id="angular-signalr-hub.TypeScript.DefinitelyTyped" version="0.7.4" targetFramework="net451" />
   <package id="angular-ui-router.TypeScript.DefinitelyTyped" version="1.5.4" targetFramework="net451" />
-  <package id="Autofac" version="4.4.0" targetFramework="net462" />
-  <package id="Autofac.Mvc5" version="4.0.1" targetFramework="net462" />
+  <package id="Autofac" version="4.6.0" targetFramework="net462" />
+  <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net462" />
   <package id="Autofac.Mvc5.Owin" version="4.0.1" targetFramework="net462" />
   <package id="Autofac.Owin" version="4.0.0" targetFramework="net451" />
   <package id="cachefactory.TypeScript.DefinitelyTyped" version="0.0.8" targetFramework="net451" />
@@ -28,48 +28,52 @@
   <package id="jquery.TypeScript.DefinitelyTyped" version="3.1.2" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.15.0" targetFramework="net451" />
   <package id="log4net" version="2.0.5" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net451" requireReinstallation="true" />
+  <package id="Microsoft.ApplicationInsights" version="2.3.0" targetFramework="net462" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.7" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.3.0" targetFramework="net462" />
   <package id="Microsoft.ApplicationInsights.Log4NetAppender" version="2.2.0" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.3.0" targetFramework="net462" />
   <package id="Microsoft.ApplicationInsights.TraceListener" version="2.2.0" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights.Web" version="2.2.0" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.2.0" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.Web" version="2.3.0" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.3.0" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.3.0" targetFramework="net462" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
-  <package id="Microsoft.AspNet.SignalR.JS" version="2.2.1" targetFramework="net451" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.2.2" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net451" />
-  <package id="Microsoft.Data.Edm" version="5.8.1" targetFramework="net462" />
-  <package id="Microsoft.Data.OData" version="5.8.1" targetFramework="net462" />
-  <package id="Microsoft.Data.Services.Client" version="5.8.1" targetFramework="net462" />
-  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net451" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net451" />
-  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net451" />
-  <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net451" />
-  <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net451" />
+  <package id="Microsoft.Data.Edm" version="5.8.2" targetFramework="net462" />
+  <package id="Microsoft.Data.OData" version="5.8.2" targetFramework="net462" />
+  <package id="Microsoft.Data.Services.Client" version="5.8.2" targetFramework="net462" />
+  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net462" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net462" />
+  <package id="Microsoft.Owin.Security" version="3.1.0" targetFramework="net462" />
+  <package id="Microsoft.Owin.Security.Cookies" version="3.1.0" targetFramework="net462" />
+  <package id="Microsoft.Owin.Security.OAuth" version="3.1.0" targetFramework="net462" />
   <package id="Microsoft.Web.Administration" version="7.0.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="Microsoft.Web.RedisOutputCacheProvider" version="1.7.3" targetFramework="net462" />
+  <package id="Microsoft.Web.RedisOutputCacheProvider" version="1.7.5" targetFramework="net462" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net451" />
   <package id="modernizr.TypeScript.DefinitelyTyped" version="0.3.1" targetFramework="net451" />
   <package id="MvcDonutCaching" version="1.3.0" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="plupload.TypeScript.DefinitelyTyped" version="0.0.1" targetFramework="net451" />
   <package id="signalr.TypeScript.DefinitelyTyped" version="0.4.1" targetFramework="net451" />
   <package id="SquishIt" version="0.9.9" targetFramework="net462" />
-  <package id="StackExchange.Redis.StrongName" version="1.1.608" targetFramework="net462" />
-  <package id="System.Spatial" version="5.8.1" targetFramework="net462" />
+  <package id="StackExchange.Redis.StrongName" version="1.2.4" targetFramework="net462" />
+  <package id="System.ComponentModel.EventBasedAsync" version="4.0.11" targetFramework="net462" />
+  <package id="System.Dynamic.Runtime" version="4.0.0" targetFramework="net462" />
+  <package id="System.Linq.Queryable" version="4.0.0" targetFramework="net462" />
+  <package id="System.Net.Requests" version="4.0.11" targetFramework="net462" />
+  <package id="System.Spatial" version="5.8.2" targetFramework="net462" />
   <package id="TransientFaultHandling.Core" version="5.1.1209.1" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.1.0" targetFramework="net462" />
   <package id="windowsazure.mediaservices" version="3.0.0.7" targetFramework="net45" />
-  <package id="WindowsAzure.Storage" version="8.0.0" targetFramework="net451" />
+  <package id="WindowsAzure.Storage" version="8.1.4" targetFramework="net462" />
   <package id="YUICompressor.NET" version="2.3.0.0" targetFramework="net462" />
 </packages>
