--- a/Zbang.Zbox.Infrastructure.Notification/packages.config
+++ b/Zbang.Zbox.Infrastructure.Notification/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Azure.NotificationHubs" version="1.0.8" targetFramework="net462" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
-  <package id="WindowsAzure.ServiceBus" version="2.3.4.0" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
+  <package id="WindowsAzure.ServiceBus" version="4.1.2" targetFramework="net462" />
 </packages>
