--- a/Zbang.Zbox.WorkerRoleSearch/packages.config
+++ b/Zbang.Zbox.WorkerRoleSearch/packages.config
@@ -1,29 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AlchemyAPIClient" version="1.5.1608.252" targetFramework="net462" />
-  <package id="Autofac" version="4.4.0" targetFramework="net462" />
+  <package id="Autofac" version="4.6.0" targetFramework="net462" />
   <package id="Hyak.Common" version="1.0.2" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net451" requireReinstallation="true" />
+  <package id="Microsoft.ApplicationInsights" version="2.3.0" targetFramework="net462" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.7" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.3.0" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.3.0" targetFramework="net462" />
   <package id="Microsoft.ApplicationInsights.TraceListener" version="2.2.0" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.2.0" targetFramework="net451" />
-  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.2.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.SignalR.Client" version="2.2.1" targetFramework="net451" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.3.0" targetFramework="net462" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.3.0" targetFramework="net462" />
+  <package id="Microsoft.AspNet.SignalR.Client" version="2.2.2" targetFramework="net462" />
   <package id="Microsoft.Azure.Common" version="2.0.4" targetFramework="net451" />
   <package id="Microsoft.Azure.Common.Dependencies" version="1.0.0" targetFramework="net451" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net451" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net451" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net451" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net451" />
-  <package id="Microsoft.Data.Edm" version="5.8.1" targetFramework="net462" />
-  <package id="Microsoft.Data.OData" version="5.8.1" targetFramework="net462" />
-  <package id="Microsoft.Data.Services.Client" version="5.8.1" targetFramework="net462" />
+  <package id="Microsoft.Data.Edm" version="5.8.2" targetFramework="net462" />
+  <package id="Microsoft.Data.OData" version="5.8.2" targetFramework="net462" />
+  <package id="Microsoft.Data.Services.Client" version="5.8.2" targetFramework="net462" />
   <package id="Microsoft.Net.Http" version="2.2.22" targetFramework="net451" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.WindowsAzure.Management.Scheduler" version="6.2.0" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
-  <package id="System.Spatial" version="5.8.1" targetFramework="net462" />
-  <package id="WindowsAzure.Storage" version="8.0.0" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net462" />
+  <package id="System.ComponentModel.EventBasedAsync" version="4.0.11" targetFramework="net462" />
+  <package id="System.Dynamic.Runtime" version="4.0.0" targetFramework="net462" />
+  <package id="System.Linq.Queryable" version="4.0.0" targetFramework="net462" />
+  <package id="System.Net.Requests" version="4.0.11" targetFramework="net462" />
+  <package id="System.Spatial" version="5.8.2" targetFramework="net462" />
+  <package id="WindowsAzure.Storage" version="8.1.4" targetFramework="net462" />
 </packages>
